--- a/CampusRecuretmentsystem/app/src/main/AndroidManifest.xml
+++ b/CampusRecuretmentsystem/app/src/main/AndroidManifest.xml
@@ -15,6 +15,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Welcome_For_Student" />
+        <activity android:name=".Welcome_Company"></activity>
     </application>
 
 </manifest>
