--- a/AuctionSystem/app/build.gradle
+++ b/AuctionSystem/app/build.gradle
@@ -30,6 +30,16 @@ dependencies {
     compile 'com.google.firebase:firebase-auth:10.0.1'
     compile 'com.google.firebase:firebase-core:10.0.1'
     compile 'com.android.support:design:24.2.1'
+    compile 'com.google.firebase:firebase-storage:10.0.1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.mikhaellopez:circularimageview:3.0.2'
+    compile 'com.theartofdev.edmodo:android-image-cropper:2.3.+'
+    compile 'com.github.siyamed:android-shape-imageview:0.9.+@aar'
+    compile 'com.android.support:cardview-v7:24.2.1'
     testCompile 'junit:junit:4.12'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.android.support:design:24.1.0'
+    compile 'com.google.android.gms:play-services:10.0.1'
+
 }
 apply plugin: 'com.google.gms.google-services'
